[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/enemies/Skeleton_Seeker/sprite/skeleton_seeker_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/Skeleton_Seeker/sprite/skeleton_seeker_death.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/Skeleton_Seeker/sprite/skeleton_skeleton_attack.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/Skeleton_Seeker/sprite/skeleton_seeker_walk.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/Skeleton_Seeker/sprite/skeleton_seeker_spawn.png" type="Texture" id=5]
[ext_resource path="res://assets/enemies/Skeleton_Seeker/script/Skeleton_seeker.gd" type="Script" id=6]
[ext_resource path="res://assets/enemies/Skeleton/script/PlayerDetectionZone.gd" type="Script" id=7]
[ext_resource path="res://assets/script/Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/enemies/Skeleton/script/PlayerAttackZone.gd" type="Script" id=9]
[ext_resource path="res://assets/enemies/Skeleton/script/hitbox.gd" type="Script" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 31.6784
height = 20.9774

[sub_resource type="Animation" id=6]
resource_name = "attack"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_finished"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "death"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/death:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 4, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "death_finished"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=10]
resource_name = "run"
length = 1.1
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=9]
resource_name = "spawn"
length = 2.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/spawn:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_finished"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.7973, 166.291 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 50.1692
height = 21.1997

[sub_resource type="CapsuleShape2D" id=4]
radius = 24.8307
height = 28.324

[sub_resource type="CapsuleShape2D" id=5]
radius = 17.6688
height = 39.3022

[node name="Skeleton_seeker" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 8 )]
MaxHealth = 200
Damage = 35
MaxSpeed = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.25995, 10.7093 )
shape = SubResource( 1 )

[node name="sprites" type="Node2D" parent="."]

[node name="run" type="Sprite" parent="sprites"]
visible = false
position = Vector2( 0.00427532, 9.02754 )
texture = ExtResource( 4 )
vframes = 6
frame = 4

[node name="death" type="Sprite" parent="sprites"]
visible = false
position = Vector2( -0.671669, 8.60778 )
texture = ExtResource( 2 )
vframes = 5

[node name="attack" type="Sprite" parent="sprites"]
position = Vector2( 1.41077, 8.31375 )
texture = ExtResource( 3 )
vframes = 10
frame = 9

[node name="spawn" type="Sprite" parent="sprites"]
position = Vector2( 2.51984, 7.70103 )
texture = ExtResource( 5 )
vframes = 11

[node name="idle" type="Sprite" parent="sprites"]
visible = false
position = Vector2( 2.2265, 8.79609 )
texture = ExtResource( 1 )
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 6 )
anims/death = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/run = SubResource( 10 )
anims/spawn = SubResource( 9 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
position = Vector2( 0.0826683, 12.04 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="PlayerAttackZone" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerAttackZone"]
position = Vector2( -0.269074, 11.3307 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="hurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2( 0.657283, 6.92935 )
shape = SubResource( 4 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2048
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 44.7914, 11.6567 )
shape = SubResource( 5 )
disabled = true
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="body_entered" from="PlayerAttackZone" to="PlayerAttackZone" method="_on_PlayerAttackZone_body_entered"]
[connection signal="body_exited" from="PlayerAttackZone" to="PlayerAttackZone" method="_on_PlayerAttackZone_body_exited"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
